--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,31 @@
+Babel==2.7.0
+bcrypt==3.1.7
+blinker==1.4
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+cryptography==2.8
 Flask==1.1.1
+Flask-HTTPAuth==3.3.0
+Flask-Mail==0.9.1
+Flask-Session==0.3.1
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
+idna==2.8
+itsdangerous==1.1.0
 Jinja2==2.10.3
+MarkupSafe==1.1.1
+nose==1.3.7
+passlib==1.7.2
+pycparser==2.19
 PyMySQL==0.9.3
-
+pytz==2019.3
+Random-Word==1.0.4
+requests==2.22.0
+six==1.13.0
+speaklater==1.3
+SQLAlchemy==1.3.11
+urllib3==1.25.7
+Werkzeug==0.16.0
+WTForms==2.2.1
